# integrated-media-inference-framework

./: .clang-format  .clang-ignore  .gitignore  AUTHORS.md  CMakeLists.txt  CODEOWNERS  LICENSE  README.md  build.sh  clang_format.sh  env.sh.example
broker/: CMakeLists.txt
broker/src/: broker_main.cpp  broker_server.cpp  broker_server.h
broker/tests/: CMakeLists.txt  test_broker_socket_thread.cpp  test_broker_subscribe.cpp
cli/: CMakeLists.txt
cli/src/: cli.cpp  cli.h  cli_main.cpp
common/: CMakeLists.txt
common/cmake/: grpc_generate.cmake
common/include/: common_broker_thread.h  common_defines.h  common_event_queue.h  common_event_queue_fd.h  common_logging.h  common_mem_manager.h  common_message.h  common_os_utils.h  common_rate_limiter.h  common_socket.h  common_socket_thread.h  common_string_utils.h  common_thread_base.h  common_thread_safe_queue.h  common_version.h
common/include/messages/: header.h
common/include/messages/grpc/: mgmt_ext_services.proto  msl_services.proto
common/include/messages/proto/: broker_control.proto  enums.proto  inference.proto  mdecode.proto  mgmt.proto  mgmt_ext.proto  msl.proto  mstream.proto  shmem_manager.proto  types.proto
common/src/: common_broker_thread.cpp  common_event_queue.cpp  common_event_queue_fd.cpp  common_logging.cpp  common_mem_manager.cpp  common_os_utils.cpp  common_rate_limiter.cpp  common_socket.cpp  common_socket_thread.cpp  common_string_utils.cpp  common_thread_base.cpp  common_version.cpp
config/: config_mobilenet-ssd_grpc.yaml  config_mobilenet-ssd_rgb_file.yaml  config_res50_collect_results_rgb_file.yaml  config_res50_collect_stats_rgb_file.yaml  config_res50_grpc_h264.yaml  config_res50_grpc_jpeg.yaml  config_res50_h264_file.yaml  config_res50_only_inference_rgb_file.yaml  config_res50_rtsp_grpc.yaml  config_res50_yolov3_hetero_h264_file.yaml  config_yolov3_hetero_h264_file.yaml  services.conf  services_mgmt.conf  services_mgmt_only.conf
custom/: CMakeLists.txt
custom/messages/proto/: tcp_sender.proto
custom/tcp_sender/: CMakeLists.txt
custom/tcp_sender/src/: sender_main.cpp  tcp_sender_thread.cpp  tcp_sender_thread.h
docker/run/: imif-centos.7.Dockerfile  imif-ubuntu.18.04.Dockerfile
docker/run/scripts/: bashrc.sh
inference/: CMakeLists.txt
inference/plugins/: CMakeLists.txt
inference/plugins/default/: CMakeLists.txt  irp_default.cpp  irp_default.h
inference/plugins/detection_output/: CMakeLists.txt  irp_detection_output.cpp  irp_detection_output.h
inference/plugins/include/: irp_plugin.h
inference/plugins/resnet50/: CMakeLists.txt  irp_resnet50.cpp  irp_resnet50.h
inference/plugins/ssd_resnet34/: CMakeLists.txt  irp_ssd_resnet34.cpp  irp_ssd_resnet34.h
inference/plugins/yolov3/: CMakeLists.txt  irp_yolov3.cpp  irp_yolov3.h
inference/src/: inference_main.cpp  inference_thread.cpp  inference_thread.h
inference/src/ilb/: ilb_inference.h  ilb_inference_openvino.cpp  ilb_inference_openvino.h  ilb_thread.cpp  ilb_thread.h
inference/src/irp/: irp_thread.cpp  irp_thread.h
lib/: CMakeLists.txt
lib/mgmt/: CMakeLists.txt
lib/mgmt/include/: mgmt_lib.h
lib/mgmt/src/: mgmt_lib.cpp
lib/msl/: CMakeLists.txt
lib/msl/include/: msl_streaming_lib.h
lib/msl/src/: msl_streaming_lib.cpp
mdecode/: CMakeLists.txt
mdecode/src/: mdecode_image_thread.cpp  mdecode_main.cpp  mdecode_thread.cpp  mdecode_thread.h  stream_pipeline_decode.cpp  stream_pipeline_decode.h
mgmt/: CMakeLists.txt
mgmt/src/: management_server.cpp  management_server.h  mgmt_main.cpp  mgmt_thread.cpp  mgmt_thread.h  publisher.cpp  publisher.h
mstream/: CMakeLists.txt
mstream/src/: mstream_grpc_server_thread.cpp  mstream_grpc_server_thread.h  mstream_imageload_thread.cpp  mstream_imageload_thread.h  mstream_main.cpp  mstream_publisher.h  mstream_result_thread.cpp  mstream_result_thread.h  mstream_rtsp_thread.cpp  mstream_rtsp_thread.h  mstream_thread.cpp  mstream_thread.h  rtsp_util_thread.cpp  rtsp_util_thread.h
rtsp_client/: CMakeLists.txt  rtsp_client.cpp  rtsp_client.h
scripts/: imif.sh  imif_docker.rc  imif_docker.sh
scripts/video/: README.md  h264_video.conf.example  rgb_video.conf.example  video_maker.sh
yaml/: CMakeLists.txt  yaml_wrapper.cpp  yaml_wrapper.h
